# test_task_shape_print

./: CMakeLists.txt  README.txt  show.docx
lib/: CMakeLists.txt  Circle.cpp  Circle.h  MyLib.h  Quadrilateral.cpp  Quadrilateral.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
lib/Space/: Button.cpp  Button.h  MainSpace.cpp  MainSpace.h  Shapes.h  Space.cpp  Space.h  ToolButton.cpp  Toolbar.cpp  Toolbar.h  WorkSpace.cpp  WorkSpace.h
src/: CMakeLists.txt  main.cpp
